fix footer on mobile

--- a/themes/custom/assets/css/main.css
+++ b/themes/custom/assets/css/main.css
@@ -276,6 +276,6 @@ footer {
 footer > div{
     padding-top:10px;
     border-top: 1px solid #dddddd;
-    width:225px;
+    width:250px;
     position:relative;
 }
